# RapidRAW

./: README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: issue_template.md  issue_template.yml
.github/workflows/: build.yml
data/: io.github.CyberTimon.RapidRAW.metainfo.xml
packaging/: io.github.CyberTimon.RapidRAW.yml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/rawler/data/cameras/fuji/: x-e5.toml
src-tauri/src/: ai_processing.rs  comfyui_connector.rs  culling.rs  file_management.rs  formats.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  inpainting.rs  lib.rs  lut_processing.rs  main.rs  mask_generation.rs  panorama_stitching.rs  preset_converter.rs  raw_processing.rs  shader.wgsl  tagging.rs
src-tauri/src/panorama_utils/: processing.rs  stitching.rs
src/components/adjustments/: Color.tsx  Curves.tsx  Details.tsx  Effects.tsx
src/components/panel/: CommunityPage.tsx  MainLibrary.tsx  SettingsPanel.tsx
src/components/panel/right/: AIControls.tsx  AIPanel.tsx  ControlsPanel.tsx  ExportPanel.tsx  LibraryExportPanel.tsx  MaskControls.tsx  MasksPanel.tsx  PresetsPanel.tsx
src/components/ui/: AppProperties.tsx  LUTControl.tsx  Slider.tsx
src/hooks/: useKeyboardShortcuts.tsx  usePresets.ts
src/utils/: adjustments.tsx
